--- a/index.html
+++ b/index.html
@@ -8,50 +8,60 @@
 </head>
 <body>
     <header>
-        <div id="logo"> Header Logo</div>
-        <div class="header-link"> header link one</div>
-        <div class="header-link"> header link two</div>
-        <div class="header-link"> header link three</div>
+        <div id="header-logo"> Header Logo</div>
+        <div id="header-links-container">
+            <div class="header-link"> <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">header link one </a></div>
+            <div class="header-link"> <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">header link two</a></div>
+            <div class="header-link"> <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">header link three</a></div>
+        </div>
     </header>
 
-    <Section1>
-        <div id="Section1-title"> This website is awesome</div>
-        <div id="Section1-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-        <button id="Section1-button">Sign up</button>
-        <div id=""Section1-image>this is a placeholder for an image</div>
-    </Section1>
+    <div id="Section1">
+        <div id="Section1-text-container">
+            <div id="Section1-title"> This website is awesome</div>
+            <div id="Section1-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button id="Section1-button">Sign up</button>
+        </div>
+        <div id="Section1-image">this is a placeholder for an image</div>
+    </div>
 
-    <Section2>
+    <div id="Section2">
         <div id="Section2-title">Some random information.</div>
-        <div class="Section2-container">
-            <div class="Section2-picture"></div>
-            <div class="Section2-text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="Section2-container">
-            <div class="Section2-picture"></div>
-            <div class="Section2-text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="Section2-container">
-            <div class="Section2-picture"></div>
-            <div class="Section2-text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="Section2-container">
-            <div class="Section2-picture"></div>
-            <div class="Section2-text">this is some subtext under an illustration or image</div>
-        </div>
-    </Section2>
+        <div id="Section2-slots">
+            <div class="Section2-container">
+                <div class="Section2-picture"></div>
+                <div class="Section2-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="Section2-container">
+                <div class="Section2-picture"></div>
+                <div class="Section2-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="Section2-container">
+                <div class="Section2-picture"></div>
+                <div class="Section2-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="Section2-container">
+                <div class="Section2-picture"></div>
+                <div class="Section2-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>  
+    </div>
 
-    <Section3>
-        <div id="Section3-quote">This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div id="Section3-author">Thor, God of Thunder</div>"
-    </Section3>
+    <div id="Section3">
+        <div id="Section3-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div id="Section3-author">-Thor, God of Thunder</div>
+    </div>
     
-    <Section4>
-        <div id="Section4-container">
-            <div class="Section4-"
-                <div id="Section4-title">Call to action! It's time!</div>
-            <div id
-    </Section4>
-    <footer></footer>
+    <div id="Section4">
+        <div class="Section4-content">
+            <div id="Section4-title"> Call to action! It's time!</div>
+            <div id="Section4-text"> Sign up for our product by clicking that button right over there</div>
+        </div>
+        <button id="Section4-button">Sign Up</button>
+    </div>
+    
+    <footer>
+        <div id="Footer-text">Copyright @ The Odin Project 2021</div>
+    </footer>
 </body>
 </html>
